test_programs/compile_failure/noirc_frontend_tests_enums_missing_integer_cases_with_empty_match/src/main.nr

        fn main() {
            let x: i8 = 3;
            match x {}
        }
    